根据主版本修改内容 修改

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -269,5 +269,6 @@
     <color name="tv_dedede">#dedede</color>
     <color name="cb_ff8a18">#ff8a18</color>
     <color name="bg_1b478e">#1b478e</color>
+    <color name="tv_ff8200">#ff8200</color>
     <color name="bg_b2b2b2">#b2b2b2</color>
 </resources>
