--- a/app/src/stuHampson/res/values/colors.xml
+++ b/app/src/stuHampson/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorPrimaryDark">#1b478e</color><!--导航栏颜色 -->
     <color name="prim_topBarColor">#1b478e</color>
     <color name="course_bg_title">#f5f5f5</color>
+    <color name="btn_tv">#ff8200</color>
 </resources>
