--- a/app/src/teachHampson/res/values/colors.xml
+++ b/app/src/teachHampson/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimary">#393f4d</color><!--toolbar颜色 -->
     <color name="colorPrimaryDark">#393f4d</color><!--导航栏颜色 -->
     <color name="prim_topBarColor">#393f4d</color>
-
+    <color name="btn_tv">#5ca6ff</color>
 </resources>
